--- a/project/index.html
+++ b/project/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-CN" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/FindValue.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuantAI Pro - 智能策略回测系统</title>
+    <title>Find Value - Find your edge. Find your alpha.</title>
     <script>
       // 初始化主题
       (function() {
